[gd_scene load_steps=26 format=1]

[ext_resource path="res://assets/zombie/zombie.gd" type="Script" id=1]
[ext_resource path="res://assets/zombie/Walk (1).png" type="Texture" id=2]
[ext_resource path="res://assets/zombie/Walk (2).png" type="Texture" id=3]
[ext_resource path="res://assets/zombie/Walk (3).png" type="Texture" id=4]
[ext_resource path="res://assets/zombie/Walk (4).png" type="Texture" id=5]
[ext_resource path="res://assets/zombie/Walk (5).png" type="Texture" id=6]
[ext_resource path="res://assets/zombie/Walk (6).png" type="Texture" id=7]
[ext_resource path="res://assets/zombie/Walk (7).png" type="Texture" id=8]
[ext_resource path="res://assets/zombie/Walk (8).png" type="Texture" id=9]
[ext_resource path="res://assets/zombie/Walk (9).png" type="Texture" id=10]
[ext_resource path="res://assets/zombie/Walk (10).png" type="Texture" id=11]
[ext_resource path="res://assets/zombie/dead/Dead (1).png" type="Texture" id=12]
[ext_resource path="res://assets/zombie/dead/Dead (2).png" type="Texture" id=13]
[ext_resource path="res://assets/zombie/dead/Dead (3).png" type="Texture" id=14]
[ext_resource path="res://assets/zombie/dead/Dead (4).png" type="Texture" id=15]
[ext_resource path="res://assets/zombie/dead/Dead (5).png" type="Texture" id=16]
[ext_resource path="res://assets/zombie/dead/Dead (6).png" type="Texture" id=17]
[ext_resource path="res://assets/zombie/dead/Dead (7).png" type="Texture" id=18]
[ext_resource path="res://assets/zombie/dead/Dead (8).png" type="Texture" id=19]
[ext_resource path="res://assets/zombie/dead/Dead (9).png" type="Texture" id=20]
[ext_resource path="res://assets/zombie/dead/Dead (10).png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 52 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]

resource/name = "dead"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 10, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.6, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.8, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}

[node name="zombie" type="Area2D" groups=[
"enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprites" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprites"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/dead = SubResource( 3 )
anims/walk = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="check_mid" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="check_down" type="RayCast2D" parent="."]

transform/pos = Vector2( -30, 60 )
enabled = true
cast_to = Vector2( 60, 0 )
layer_mask = 1
type_mask = 15

[connection signal="body_enter" from="." to="." method="_on_get_player_body_enter"]


